# open-amp

./: CMakeLists.txt  README.md
android/: README.md  gradle.properties  local.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/presets/: 05_edge_crunch.preset  06_blues_driver.preset  08_plexi_crunch.preset  11_classic_metal.preset  12_brown_sound.preset  14_shimmer_pad.preset  26_wah_cry.preset  28_looper_setup.preset  34_bass_overdrive.preset  37_twangy_tele.preset  40_motown_clean.preset  41_punk_power.preset  42_grunge_sludge.preset  45_shoegaze_wall.preset  59_glam_arena.preset  63_edge_breakup.preset  65_classical_nylon.preset  66_flat_response.preset  70_brit_pop_crunch.preset  71_indie_jangle.preset  72_alt_90s_crunch.preset  78_drop_tuned.preset  84_lofi_grit.preset  89_gospel_chords.preset  92_studio_clean.preset
android/app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  JniBridge.cpp
android/app/src/main/java/com/openamp/: AudioEngine.kt  MainActivity.kt
android/app/src/main/java/com/openamp/midi/: MidiController.kt
android/app/src/main/java/com/openamp/presets/: PresetManager.kt
android/app/src/main/res/drawable/: bg_neon_card.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  themes.xml
dsp-core/: CMakeLists.txt
dsp-core/include/openamp/: amp_simulator.h  dsp_engine.h  dsp_utils.h  effect_chain.h  input_processor.h  ir_loader.h  latency_monitor.h  lockfree_queue.h  plugin_interface.h  plugin_loader.h  preset_store.h  simd_utils.h
dsp-core/plugins/: CMakeLists.txt
dsp-core/plugins/acoustic_sim/: CMakeLists.txt  acoustic_sim.cpp  acoustic_sim.h  acoustic_sim_plugin.cpp
dsp-core/plugins/cabinet/: CMakeLists.txt  cabinet.cpp  cabinet.h  cabinet_plugin.cpp
dsp-core/plugins/compressor/: CMakeLists.txt  compressor.cpp  compressor.h  compressor_plugin.cpp
dsp-core/plugins/delay/: CMakeLists.txt  delay.cpp  delay.h  delay_plugin.cpp
dsp-core/plugins/distortion/: CMakeLists.txt  distortion.cpp  distortion.h  distortion_plugin.cpp
dsp-core/plugins/eq/: CMakeLists.txt  eq.cpp  eq.h  eq_plugin.cpp
dsp-core/plugins/harmonizer/: CMakeLists.txt  harmonizer.cpp  harmonizer.h  harmonizer_plugin.cpp
dsp-core/plugins/looper/: CMakeLists.txt  looper.cpp  looper.h  looper_plugin.cpp
dsp-core/plugins/metronome/: CMakeLists.txt  metronome.cpp  metronome.h  metronome_plugin.cpp
dsp-core/plugins/modulation/: CMakeLists.txt  modulation.cpp  modulation.h  modulation_plugin.cpp
dsp-core/plugins/noise_gate/: CMakeLists.txt  noise_gate.cpp  noise_gate.h  noise_gate_plugin.cpp
dsp-core/plugins/recorder/: CMakeLists.txt  recorder.cpp  recorder.h  recorder_plugin.cpp
dsp-core/plugins/reverb/: CMakeLists.txt  reverb.cpp  reverb.h  reverb_plugin.cpp
dsp-core/plugins/tuner/: CMakeLists.txt  tuner.cpp  tuner.h  tuner_plugin.cpp
dsp-core/plugins/wah/: CMakeLists.txt  wah.cpp  wah.h  wah_plugin.cpp
dsp-core/src/: CMakeLists.txt  amp_simulator.cpp  dsp_engine.cpp  effect_chain.cpp  input_processor.cpp  ir_loader.cpp  plugin_loader.cpp  preset_store.cpp
dsp-core/tests/: CMakeLists.txt  test_amp_simulator.cpp  test_delay.cpp  test_distortion.cpp  test_dsp_utils.cpp  test_main.cpp  test_preset_store.cpp  test_reverb.cpp
ios/: Package.swift
ios/OpenAmp/: AudioEngine.swift  GuitarAmpObjC.mm  Info.plist  OpenAmpApp.swift  OpenFXBridgingHeader.h  OpenFXObjC.h
ios/OpenAmp.xcodeproj/: project.pbxproj
ios/OpenAmp/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/OpenAmp/Resources/Presets/: 02_jazz_box.preset  03_glassy_shimmer.preset  04_acoustic_sim.preset  10_modern_high_gain.preset  15_spacey_echo.preset  16_swell_builder.preset  17_fuzz_stomp.preset  19_tone_bender.preset  21_chorus_dreams.preset  27_quiet_practice.preset  30_live_stage.preset  31_piezo_sim.preset  32_acoustic_electric.preset  39_funk_slap.preset  44_post_rock.preset  46_reggae_roots.preset  47_dub_echo.preset  55_metalcore_rhythm.preset  57_blackened_crunch.preset  64_comp_studio.preset  68_small_combo.preset  73_garage_raw.preset  77_metal_lead.preset  79_neoclassical.preset  83_glitch_stutter.preset  88_fingerpicking.preset  94_reamping_prep.preset  95_practice_quiet.preset  96_headphones_late.preset
ios/OpenAmp/Views/: AmpView.swift  EffectsView.swift  MainView.swift  PresetsView.swift  SettingsView.swift  TunerView.swift
ios/OpenAmp/Views/Components/: KnobView.swift
ios/Sources/DSPCore/: DSPCore.cpp
ios/Sources/DSPCore/include/: DSPCore.h  module.modulemap
ios/Tests/DSPCoreTests/: DSPCoreTests.swift
linux/: CMakeLists.txt  README.md  build.sh
linux/resources/: guitar-amp.desktop  openamp.desktop  qml.qrc
linux/src/: main.cpp
linux/src/audio/: alsa_backend.cpp  alsa_backend.h  audio_backend.cpp  audio_backend.h  midi_handler.cpp  midi_handler.h  pipewire_backend.cpp  pipewire_backend.h
linux/src/ui/: amp_panel.cpp  amp_panel.h  effects_panel.cpp  effects_panel.h  ir_panel_widget.cpp  ir_panel_widget.h  knob_widget.cpp  knob_widget.h  latency_display_widget.cpp  latency_display_widget.h  main_window.cpp  main_window.h  meter_widget.cpp  meter_widget.h  pedal_widget.cpp  pedal_widget.h  preset_browser.cpp  preset_browser.h  settings_dialog.cpp  settings_dialog.h  theme.cpp  theme.h
presets/: FACTORY_PRESETS.md  README.md
presets/factory/: 01_clean_sparkle.preset  100_stadium_huge.preset  13_ambient_clean.preset  18_octave_fuzz.preset  24_tremolo_vintage.preset  25_wah_funk.preset  33_bass_clean.preset  38_dark_jazz.preset  43_stoner_doom.preset  49_chicago_blues.preset  51_country_chicken.preset  54_slash_lead.preset  56_progressive_djent.preset  60_math_rock_clean.preset  61_spank_plank.preset  62_warm_fat_clean.preset  67_pedal_platform.preset  75_tape_wobble.preset  81_ambient_pad.preset  82_ethereal.preset  85_bit_crusher.preset  93_di_recording.preset  97_jam_track.preset  98_live_loud.preset
test_ir/: LINUX_VALIDATION_REPORT.md  generate_test_ir.py  test_validation  test_validation.cpp
(+5 files in other folders)
