add_subdirectory(distortion)
add_subdirectory(delay)
add_subdirectory(reverb)
add_subdirectory(eq)
add_subdirectory(compressor)
add_subdirectory(modulation)
add_subdirectory(noise_gate)
add_subdirectory(wah)
add_subdirectory(tuner)
add_subdirectory(looper)
add_subdirectory(metronome)
add_subdirectory(recorder)
add_subdirectory(cabinet)
add_subdirectory(acoustic_sim)
add_subdirectory(harmonizer)
